@@ -1,4 +1,4 @@
-/* Copyright 2002-2018 CS Systèmes d'Information
+/* Copyright 2002-2019 CS Systèmes d'Information
  * Licensed to CS Systèmes d'Information (CS) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
@@ -66,9 +66,9 @@ public class GeodeticPoint implements Serializable {
      * Build a new instance. The angular coordinates will be normalized so that
      * the latitude is between ±π/2 and the longitude is between ±π.
      *
-     * @param latitude latitude of the point
-     * @param longitude longitude of the point
-     * @param altitude altitude of the point
+     * @param latitude latitude of the point (rad)
+     * @param longitude longitude of the point (rad)
+     * @param altitude altitude of the point (m)
      */
     public GeodeticPoint(final double latitude, final double longitude,
                          final double altitude) {
@@ -200,9 +200,9 @@ public class GeodeticPoint implements Serializable {
 
     @Override
     public int hashCode() {
-        return new Double(this.getLatitude()).hashCode() ^
-               new Double(this.getLongitude()).hashCode() ^
-               new Double(this.getAltitude()).hashCode();
+        return Double.valueOf(this.getLatitude()).hashCode() ^
+               Double.valueOf(this.getLongitude()).hashCode() ^
+               Double.valueOf(this.getAltitude()).hashCode();
     }
 
     @Override
